--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
-    "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.18.0",
-    "react-toastify": "^9.1.3"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
