Add changestatus api, some macro changes

--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "axios": "^1.6.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "n2words": "^1.18.0",
+    "number-to-words-ru": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "rosaenlg-n2words": "^3.3.0",
+    "to-words": "^3.7.0",
+    "written-number": "^0.11.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
