--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "antd": "^5.11.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "exceljs": "^4.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-hook-form": "^7.49.2",
+    "react-router-dom": "^6.18.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
