--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "exceljs": "^4.4.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
