--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@reduxjs/toolkit": "^2.0.1",
     "antd": "^5.11.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
@@ -20,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0",
     "xlsx": "^0.18.5"
   },
