--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.11.0",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "exceljs": "^4.4.0",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
